// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a topic 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_topic",
        "props": {
          "subscribers": [],
        },
        "type": "wingsdk.cloud.Topic",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_topic": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A pub/sub notification topic",
            "title": "Topic",
          },
          "id": "my_topic",
          "path": "root/my_topic",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`topic publishes messages as they are received 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "Subscriber error: Error: Cannot find module '/Users/eladb/code/wing2/libs/wingsdk/src/target-sim/topic.onmessage.inflight.js'
Require stack:
- /Users/eladb/code/wing2/libs/wingsdk/src/target-sim/function.inflight.ts",
  "Publish (message=Beta).",
  "Sending message (message=Beta, subscriber=sim-1).",
  "Invoke (payload=\\"\\"Beta\\"\\").",
  "Subscriber error: Error: Cannot find module '/Users/eladb/code/wing2/libs/wingsdk/src/target-sim/topic.onmessage.inflight.js'
Require stack:
- /Users/eladb/code/wing2/libs/wingsdk/src/target-sim/function.inflight.ts",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`topic publishes messages to multiple subscribers 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "Subscriber error: Error: Cannot find module '/Users/eladb/code/wing2/libs/wingsdk/src/target-sim/topic.onmessage.inflight.js'
Require stack:
- /Users/eladb/code/wing2/libs/wingsdk/src/target-sim/function.inflight.ts",
  "Sending message (message=Alpha, subscriber=sim-2).",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "Subscriber error: Error: Cannot find module '/Users/eladb/code/wing2/libs/wingsdk/src/target-sim/topic.onmessage.inflight.js'
Require stack:
- /Users/eladb/code/wing2/libs/wingsdk/src/target-sim/function.inflight.ts",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;
